compiler/tests/fail/asmgen/arm-m4/address_too_complex.jazz
export fn f (reg ptr u32[2] r, reg u32 i) -> reg u32 {
  reg u32 res = r[i+2];
  return res;
}
